tests/snapshots/cli__add_single_workflow.snap
---
source: tests/cli.rs
expression: normalized
---

=== Add New Threat ===

[INFO] Non-interactive mode (using provided args)

[INFO] Adding 1 workflow path(s)...


=== Threat Summary ===

Name:        workflow-test
Date:        2025-01-01
Packages:    0
Description: Test with workflow

Workflow Paths:
  • .github/workflows/publish.yml


✓ Threat saved successfully!
File: workflow-test.ect
