tests/snapshots/cli__check_effect_yarn_clean.snap
---
source: tests/cli.rs
expression: normalized_stdout
---
[INFO] Loading all known threats...
[SUCCESS] Loaded 1 threats
  • lodash-compromise (1 packages)


=== Starting Security Scan ===
Directory: <PROJECT_DIR>/tests/fixtures/effect-app-yarn


=== Starting Security Scan ===
Directory: <PROJECT_DIR>/tests/fixtures/effect-app-yarn

[SCAN] Checking package.json...
  [OK] No issues found
[SCAN] Checking yarn.lock...
  [COMPROMISED] lodash@4.17.21

=== Scan Summary ===
  Packages checked: <N>
  Files scanned: 0

✗ 1 security issues found:
  - 1 compromised packages
  - 0 malicious code patterns
  - 0 payload files

=== Final Report ===

Packages checked: <N>
Files scanned:    0

⚠ 1 CRITICAL ISSUES FOUND

Compromised Packages:

  • lodash@4.17.21 in yarn.lock
    Threat: lodash-compromise

Recommended Actions:
  1. Remove or update compromised packages immediately
  2. Review your dependency tree for transitive dependencies
  3. Check your package-lock.json or yarn.lock for version locks
  4. Consider using npm audit or yarn audit for additional checks
